@@ -30,14 +30,9 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
-import com.publicissapient.kpidashboard.apis.config.CustomApiConfig;
-import com.publicissapient.kpidashboard.apis.jenkins.service.JenkinsServiceR;
-import com.publicissapient.kpidashboard.apis.jira.service.NonTrendServiceFactory;
-import com.publicissapient.kpidashboard.apis.model.ProjectWiseKpiRecommendation;
-import com.publicissapient.kpidashboard.common.constant.CommonConstant;
-import com.publicissapient.kpidashboard.common.model.application.HierarchyLevel;
-import com.publicissapient.kpidashboard.common.service.HierarchyLevelService;
+import com.publicissapient.kpidashboard.apis.bitbucket.service.BitBucketServiceR;
 import org.apache.commons.collections4.CollectionUtils;
+import org.apache.commons.collections4.MapUtils;
 import org.slf4j.MDC;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.ParameterizedTypeReference;
@@ -47,21 +42,28 @@ import org.springframework.http.HttpMethod;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
+import org.springframework.web.client.RestTemplate;
 
+import com.publicissapient.kpidashboard.apis.config.CustomApiConfig;
 import com.publicissapient.kpidashboard.apis.constant.Constant;
 import com.publicissapient.kpidashboard.apis.errors.EntityNotFoundException;
+import com.publicissapient.kpidashboard.apis.jenkins.service.JenkinsServiceR;
 import com.publicissapient.kpidashboard.apis.jira.service.JiraServiceR;
+import com.publicissapient.kpidashboard.apis.jira.service.NonTrendServiceFactory;
 import com.publicissapient.kpidashboard.apis.model.KpiElement;
 import com.publicissapient.kpidashboard.apis.model.KpiRequest;
+import com.publicissapient.kpidashboard.apis.model.ProjectWiseKpiRecommendation;
 import com.publicissapient.kpidashboard.apis.sonar.service.SonarServiceR;
 import com.publicissapient.kpidashboard.apis.zephyr.service.ZephyrService;
+import com.publicissapient.kpidashboard.common.constant.CommonConstant;
 import com.publicissapient.kpidashboard.common.model.application.DataCount;
 import com.publicissapient.kpidashboard.common.model.application.DataCountGroup;
+import com.publicissapient.kpidashboard.common.model.application.HierarchyLevel;
 import com.publicissapient.kpidashboard.common.model.application.KpiMaster;
 import com.publicissapient.kpidashboard.common.repository.application.KpiMasterRepository;
+import com.publicissapient.kpidashboard.common.service.HierarchyLevelService;
 
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.web.client.RestTemplate;
 
 /**
  * @author kunkambl
@@ -76,6 +78,7 @@ public class KpiIntegrationServiceImpl {
 	private static final String KPI_SOURCE_SONAR = "Sonar";
 	private static final String KPI_SOURCE_ZEPHYR = "Zypher";
 	private static final String KPI_SOURCE_JENKINS = "Jenkins";
+	private static final String KPI_SOURCE_DEVELOPER = "BitBucket";
 	private static final String SPRINT_CLOSED = "CLOSED";
 	private static final String RNR_API_HEADER = "X-Custom-Authentication";
 
@@ -101,6 +104,9 @@ public class KpiIntegrationServiceImpl {
 	NonTrendServiceFactory serviceFactory;
 
 	@Autowired
+	private BitBucketServiceR bitBucketServiceR;
+
+	@Autowired
 	private CustomApiConfig customApiConfig;
 
 	@Autowired
@@ -110,7 +116,7 @@ public class KpiIntegrationServiceImpl {
 	 * get kpi element list with maturity assuming req for hierarchy level 4
 	 *
 	 * @param kpiRequest
-	 * 		kpiRequest to fetch kpi data
+	 *          kpiRequest to fetch kpi data
 	 * @return list of KpiElement
 	 */
 	public List<KpiElement> getKpiResponses(KpiRequest kpiRequest) {
@@ -122,7 +128,7 @@ public class KpiIntegrationServiceImpl {
 		sourceWiseKpiList.forEach((source, kpiList) -> {
 			try {
 				kpiRequest.setKpiList(sourceWiseKpiList.get(source).stream().map(this::mapKpiMasterToKpiElement)
-						.collect(Collectors.toList()));
+						.toList());
 				switch (source) {
 				case KPI_SOURCE_JIRA:
 					kpiElements.addAll(getJiraKpiMaturity(kpiRequest));
@@ -135,6 +141,9 @@ public class KpiIntegrationServiceImpl {
 					break;
 				case KPI_SOURCE_JENKINS:
 					kpiElements.addAll(getJenkinsKpiMaturity(kpiRequest));
+					break;
+				case KPI_SOURCE_DEVELOPER:
+					kpiElements.addAll(getDeveloperKpiMaturity(kpiRequest));
 					break;
 				default:
 					log.error("Invalid Kpi");
@@ -150,8 +159,8 @@ public class KpiIntegrationServiceImpl {
 					List<DataCountGroup> dataCountGroups = (List<DataCountGroup>) trendValueList;
 
 					Optional<DataCount> firstMatchingDataCount = dataCountGroups.stream()
-							.filter(trend -> FILTER_LIST.contains(trend.getFilter()) || (FILTER_LIST.contains(
-									trend.getFilter1()) && FILTER_LIST.contains(trend.getFilter2())))
+							.filter(trend -> FILTER_LIST.contains(trend.getFilter()) ||
+									(FILTER_LIST.contains(trend.getFilter1()) && FILTER_LIST.contains(trend.getFilter2())))
 							.map(DataCountGroup::getValue).flatMap(List::stream).findFirst();
 
 					firstMatchingDataCount.ifPresent(dataCount -> {
@@ -173,7 +182,9 @@ public class KpiIntegrationServiceImpl {
 
 	/**
 	 * set kpi request parameters as per the request
-	 * @param kpiRequest received kpi request
+	 *
+	 * @param kpiRequest
+	 *          received kpi request
 	 */
 	public void setKpiRequest(KpiRequest kpiRequest) {
 		String[] hierarchyIdList = kpiRequest.getIds();
@@ -181,29 +192,30 @@ public class KpiIntegrationServiceImpl {
 				.filter(hierarchyLevel -> hierarchyLevel.getLevel() == kpiRequest.getLevel()).findFirst();
 		if (optionalHierarchyLevel.isPresent()) {
 			HierarchyLevel hierarchyLevel = optionalHierarchyLevel.get();
-			if (hierarchyIdList  == null) {
-				hierarchyIdList = new String[] { kpiRequest.getHierarchyName().concat(Constant.UNDERSCORE).concat(
-						hierarchyLevel.getHierarchyLevelId()) };
+			if (hierarchyIdList == null) {
+				hierarchyIdList = new String[]{
+						kpiRequest.getHierarchyName().concat(Constant.UNDERSCORE).concat(hierarchyLevel.getHierarchyLevelId())};
 			}
-			Map<String, List<String>> selectedMap = new HashMap<>();
-			selectedMap.put(hierarchyLevel.getHierarchyLevelId(),
-					Arrays.stream(hierarchyIdList).collect(Collectors.toList()));
+			if(MapUtils.isEmpty(kpiRequest.getSelectedMap())) {
+				Map<String, List<String>> selectedMap = new HashMap<>();
+				selectedMap.put(hierarchyLevel.getHierarchyLevelId(), Arrays.stream(hierarchyIdList).toList());
+				kpiRequest.setSelectedMap(selectedMap);
+			}
+
 			kpiRequest.setIds(hierarchyIdList);
 			kpiRequest.setLabel(hierarchyLevel.getHierarchyLevelId());
-			kpiRequest.setSelectedMap(selectedMap);
-			kpiRequest.setSprintIncluded(Arrays.asList(SPRINT_CLOSED));
+			kpiRequest.setSprintIncluded(List.of(SPRINT_CLOSED));
 		}
-
 	}
 
 	/**
 	 * get kpi data for source jira
 	 *
 	 * @param kpiRequest
-	 * 		kpiRequest to fetch kpi data
+	 *          kpiRequest to fetch kpi data
 	 * @return list of jira KpiElement
 	 * @throws EntityNotFoundException
-	 * 		entity not found exception for jira service method
+	 *           entity not found exception for jira service method
 	 */
 	private List<KpiElement> getJiraKpiMaturity(KpiRequest kpiRequest) throws EntityNotFoundException {
 		MDC.put("JiraScrumKpiRequest", kpiRequest.getRequestTrackerId());
@@ -216,9 +228,9 @@ public class KpiIntegrationServiceImpl {
 		category.add(CommonConstant.BACKLOG);
 		List<KpiElement> responseList;
 		if (category.contains(kpiRequest.getKpiList().get(0).getKpiCategory())) {
-			//when request coming from ITERATION/RELEASE/BACKLOG board
+			// when request coming from ITERATION/RELEASE/BACKLOG board
 			responseList = serviceFactory.getService(kpiRequest.getKpiList().get(0).getKpiCategory())
-						.processWithExposedApiToken(kpiRequest);
+					.processWithExposedApiToken(kpiRequest);
 		} else {
 			responseList = jiraService.processWithExposedApiToken(kpiRequest);
 		}
@@ -231,7 +243,7 @@ public class KpiIntegrationServiceImpl {
 	 * get kpi data for source sonar
 	 *
 	 * @param kpiRequest
-	 * 		kpiRequest to fetch kpi data
+	 *          kpiRequest to fetch kpi data
 	 * @return list of sonar KpiElement
 	 */
 	private List<KpiElement> getSonarKpiMaturity(KpiRequest kpiRequest) {
@@ -249,10 +261,10 @@ public class KpiIntegrationServiceImpl {
 	 * get kpi data for source zephyr
 	 *
 	 * @param kpiRequest
-	 * 		kpiRequest to fetch kpi data
+	 *          kpiRequest to fetch kpi data
 	 * @return list of sonar KpiElement
 	 * @throws EntityNotFoundException
-	 * 		entity not found exception for zephyr service method
+	 *           entity not found exception for zephyr service method
 	 */
 	private List<KpiElement> getZephyrKpiMaturity(KpiRequest kpiRequest) throws EntityNotFoundException {
 		MDC.put("ZephyrKpiRequest", kpiRequest.getRequestTrackerId());
@@ -269,10 +281,10 @@ public class KpiIntegrationServiceImpl {
 	 * get kpi data for source jenkins
 	 *
 	 * @param kpiRequest
-	 * 		kpiRequest to fetch kpi data
+	 *          kpiRequest to fetch kpi data
 	 * @return list of sonar KpiElement
 	 * @throws EntityNotFoundException
-	 * 		entity not found exception for jenkins service method
+	 *           entity not found exception for jenkins service method
 	 */
 	private List<KpiElement> getJenkinsKpiMaturity(KpiRequest kpiRequest) throws EntityNotFoundException {
 		MDC.put("JenkinsKpiRequest", kpiRequest.getRequestTrackerId());
@@ -286,10 +298,31 @@ public class KpiIntegrationServiceImpl {
 	}
 
 	/**
+	 * get kpi data for source jenkins
+	 *
+	 * @param kpiRequest
+	 * 		kpiRequest to fetch kpi data
+	 * @return list of sonar KpiElement
+	 * @throws EntityNotFoundException
+	 * 		entity not found exception for jenkins service method
+	 */
+	private List<KpiElement> getDeveloperKpiMaturity(KpiRequest kpiRequest) throws EntityNotFoundException {
+		MDC.put("DeveloperKpiRequest", kpiRequest.getRequestTrackerId());
+		String sanitizedRequestTrackerId = kpiRequest.getRequestTrackerId().replaceAll("[^a-zA-Z0-9-_]", "_");
+		log.info("Received Developer KPI request {}", sanitizedRequestTrackerId);
+		long developerRequestStartTime = System.currentTimeMillis();
+		MDC.put("JenkinsRequestStartTime", String.valueOf(developerRequestStartTime));
+		List<KpiElement> responseList = bitBucketServiceR.processWithExposedApiToken(kpiRequest);
+		MDC.put("TotalJenkinsRequestTime", String.valueOf(System.currentTimeMillis() - developerRequestStartTime));
+		MDC.clear();
+		return responseList;
+	}
+
+	/**
 	 * Map KpiMaster object to KpiElement
 	 *
 	 * @param kpiMaster
-	 * 		KpiMaster object fetched from db
+	 *          KpiMaster object fetched from db
 	 * @return KpiElement
 	 */
 	public KpiElement mapKpiMasterToKpiElement(KpiMaster kpiMaster) {
@@ -311,12 +344,13 @@ public class KpiIntegrationServiceImpl {
 		kpiElement.setGroupId(kpiMaster.getGroupId());
 		return kpiElement;
 	}
+
 	public List<ProjectWiseKpiRecommendation> getProjectWiseKpiRecommendation(KpiRequest kpiRequest) {
 		try {
-			Optional<String> sprintId = kpiRequest.getSelectedMap().get(CommonConstant.HIERARCHY_LEVEL_ID_SPRINT)
-					.stream().findFirst();
-			Optional<String> projectId = kpiRequest.getSelectedMap().get(CommonConstant.HIERARCHY_LEVEL_ID_PROJECT)
-					.stream().findFirst();
+			Optional<String> sprintId = kpiRequest.getSelectedMap().get(CommonConstant.HIERARCHY_LEVEL_ID_SPRINT).stream()
+					.findFirst();
+			Optional<String> projectId = kpiRequest.getSelectedMap().get(CommonConstant.HIERARCHY_LEVEL_ID_PROJECT).stream()
+					.findFirst();
 			String recommendationUrl = String.format(customApiConfig.getRnrRecommendationUrl(),
 					URLEncoder.encode(projectId.orElse(""), StandardCharsets.UTF_8),
 					URLEncoder.encode(sprintId.orElse(""), StandardCharsets.UTF_8),
@@ -325,8 +359,8 @@ public class KpiIntegrationServiceImpl {
 			httpHeaders.set(RNR_API_HEADER, customApiConfig.getRnrRecommendationApiKey());
 			httpHeaders.setContentType(MediaType.APPLICATION_JSON);
 			HttpEntity<String> entity = new HttpEntity<>(httpHeaders);
-			ResponseEntity<List<ProjectWiseKpiRecommendation>> response = restTemplate.exchange(
-					URI.create(recommendationUrl), HttpMethod.GET, entity, new ParameterizedTypeReference<>() {
+			ResponseEntity<List<ProjectWiseKpiRecommendation>> response = restTemplate.exchange(URI.create(recommendationUrl),
+					HttpMethod.GET, entity, new ParameterizedTypeReference<>() {
 					});
 			return response.getBody();
 		} catch (Exception ex) {
@@ -334,6 +368,4 @@ public class KpiIntegrationServiceImpl {
 			return new ArrayList<>();
 		}
 	}
-
-
 }
